# TheraPredict

./: .gitignore  Dockerfile  PLATFORM_ARCHITECTURE.md  TECHNICAL_REFERENCE_V1.md  demo.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run.sh  vercel.json
.claude/: settings.local.json
api/: index.py
frontend/: index.html  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/simulate/: page.js
frontend/src/: App.jsx
frontend/src/components/: BodyDiagram.jsx  LandingPage.jsx  ResultsDashboard.jsx  SimulationForm.jsx  V1ResultsDashboard.jsx  V1SimulationForm.jsx
src/theranostics/: __init__.py  config.py  orchestrator.py  orchestrator_v1.py
src/theranostics/api/: main.py
src/theranostics/api/routes/: agents.py  simulate.py  simulate_v1.py
src/theranostics/engines/: __init__.py  agent.py  body.py  decision.py  pkpd.py  target.py
src/theranostics/integrations/: __init__.py  human_protein_atlas.py  open_targets.py  uniprot.py
src/theranostics/models/: __init__.py  agent_properties.py  compartment.py  patient.py  simulation.py
src/theranostics/services/: __init__.py  decision_engine_v1.py  dosimetry_engine_v1.py  input_normalizer.py  knowledge_layer.py  logging_service.py  parameter_builder.py  pbpk_engine_v1.py  pd_engine.py
tests/: test_agent_engine.py  test_body_engine.py  test_integration.py  test_target_engine.py  test_v1_pipeline.py
tests/benchmark/: test_v1_benchmark.py
tests/validation/: test_trastuzumab_pk.py
