[project]
name = "theranostics"
version = "0.1.0"
description = "AI-Driven Digital Theranostic Simulation Platform"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "scikit-learn>=1.4",
    "plotly>=5.18",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
ml = [
    "xgboost>=2.0",
    "shap>=0.45",
]
imaging = [
    "pydicom>=2.4",
    "nibabel>=5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theranostics"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
